--- a/04.Model2MVCShop/.settings/org.eclipse.wst.common.component
+++ b/04.Model2MVCShop/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+            
+    
     <wb-module deploy-name="01.Model2MVCShop(stu)">
+                        
+        
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                        
+        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+                        
+        
         <dependent-module archiveName="ojdbc14.jar" deploy-path="/WEB-INF/lib/" handle="module:/resource/ojdbc14/ojdbc14">
+                                    
+            
             <dependency-type>uses</dependency-type>
+                                
+        
         </dependent-module>
+                        
+        
         <property name="context-root" value="01.Model2MVCShop(stu)"/>
+                        
+        
         <property name="java-output-path" value="/01.Model2MVCShop(stu)/build/classes"/>
+                    
+    
     </wb-module>
+        
+
 </project-modules>
